--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,33 @@
-data/*
-.vscode/*
-tmp/*
-.venv
-__pycache__/
-pipeline/pp0_data/*
+# Notebooks
+
+notebooks/
+
+# Temporal files 
+
+tmp/
+
+# Data
+
+pipeline/pp0_data/
+data/
 *.json
 *.feather
+
+
+# Environment
+venv/
+env/
+.venv/
+.env/
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# VSCode
+.vscode/
+
+# Variables de entorno
+.env
+.env.*
